--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,11 @@ body {
 .link a {
     font-size: 1.3em;
 }
+
+.download-button {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
